# devops-automation

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Install.ps1  InstallDevEnv.ps1  InstallPy.ps1  LICENSE  LICENSE.txt  README.md  ReleaseAmendment.md  ReleaseNotes.md  SetToLocalRepo.ps1  SetToRemoteRepo.ps1  SetUpDocker.ps1  SetupDotEnv.ps1  SetupGitHubAccess.ps1  SetupPrivateRepoAccess.ps1  docker-compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: 00-deployment-pipeline.yaml  00-new-release-pipeline.yaml  01-amend-release-notes.yaml  01-pre-commit.yaml  02-amend-release-notes.yaml  02-ci.yaml  02-pre-commit.yaml  03-build-and-publish-to-pypi.yaml  03-build-and-publish.yaml  03-merge.yaml  03-publish-new-release.yaml  04-publish-release.yaml  05-send-notice.yaml  Untitled  all-pc-fork-all-merge-def.yaml  all-pc-fork-merge-def.yaml  all-pc-fork-pub-merge-def.yaml  all-pc-fork-pub-sync_with_upstream-def.yaml  all-pc-fork-pub_sync_with_upstream-def.yaml  all-pc-fork-pvt-merge-def.yaml  all-pc-fork-pvt-sync_with_upstream-def.yaml  all-pc-fork-pvt_sync_with_upstream-def.yaml  all-pc-fork-sync_with_upstream-def.yaml  all-pc-notify-all-def.yaml  all-pc-notify-def.yaml  all-pc-pr-all-cleanup_tag-def.yaml  all-pc-pr-all-def.yaml  all-pc-pr-all-detect_tag-def.yaml  all-pc-pr-cleanup_tag-def.yaml  all-pc-pr-def.yaml  all-pc-pr-detect_tag-def.yaml  all-wf-fork-pub-scheduled_sync_with_upstream-def.yaml  all-wf-fork-pub_scheduled_sync_with_upstream-def.yaml  all-wf-fork-pvt-scheduled_sync_with_upstream-def.yaml  all-wf-fork-pvt_scheduled_sync_with_upstream-def.yaml  all-wf-fork-scheduled_sync_with_upstream-def.yaml  iac-pc-release-all-def.yaml  iac-wf-fork-pvt-merge_no_docker-def.yaml  iac-wf-fork-pvt_merge_no_docker-def.yaml  iac-wf-pr-pvt-straight_through-def.yaml  (+99 more)
.github/workflows/legacy/: linear-project-description.md  linear-sub-issue.md  py-pc-dep-no_docker-def.yaml  py-pc-dep-with_docker-def.yaml  py-pc-pypi-default.yaml  py-temp-fork-pvt_merge_no_docker-def.yaml  py-temp-fork-pvt_merge_with_docker-def.yaml  py-wf-dep-pvt_no_docker-def.yaml  py-wf-dep-pvt_with_docker-def.yaml  py-wf-fork-merge_no_docker-def.yaml  py-wf-fork-merge_with_docker-def.yaml  py-wf-pub-pvt_no_docker-def.yaml  py-wf-pypi-pub_with_docker-def.yaml  py-wf-rel-after-merge-def.yaml
.junie/: guidelines.md
ai_prompts/: AGENTS.md  Issue-Feature.md  Issue-Main-Feature.md  Project-Create-a-new-Project.md  Release-Update-General.md  Release-Update-General.txt  Release-Update-devops_automation.md  Release-Update-devops_automation.txt  Workflow-Add-environment-variable.md  pushpr-git-commit-message.md
docs/: python-template-default.md
legacy/: commit_messages.txt  linear-issue.md
prompts_ai/: ReleaseNotes.txt
templates/: all-temp-fork-pub-scheduled_sync_with_upstream-daily.yaml  all-temp-fork-pub-scheduled_sync_with_upstream-daily.yaml.yaml  all-temp-fork-pub-scheduled_sync_with_upstream-monthly.yaml  all-temp-fork-pub-scheduled_sync_with_upstream-weekly.yaml  all-temp-fork-pub_scheduled_sync_with_upstream-daily.yaml  all-temp-fork-pvt-scheduled_sync_with_upstream-daily.yaml  all-temp-fork-pvt-scheduled_sync_with_upstream-monthly.yaml  all-temp-fork-pvt-scheduled_sync_with_upstream-weekly.yaml  all-temp-fork-pvt_scheduled_sync_with_upstream-daily.yaml  all-temp-fork-pvt_scheduled_sync_with_upstream-monthly.yaml  all-temp-fork-pvt_scheduled_sync_with_upstream-weekly.yaml  all-temp-fork-scheduled_sync_with_upstream-daily.yaml  all-temp-fork-scheduled_sync_with_upstream-monthly.yaml  all-temp-fork-scheduled_sync_with_upstream-weekly.yaml  iac-temp-fork-pvt-merge_no_docker-def.yaml  iac-temp-fork-pvt_merge_no_docker-def.yaml  iac-temp-pr-pvt-straight_through-def.yaml  iac-temp-publish-pvt-release_notify_after_merge-def.yaml  py-temp-dep-pvt_no_docker-def.yaml  py-temp-dep-pvt_no_docker-fork.yaml  py-temp-dep-pvt_with_docker-def.yaml  py-temp-fork-pub-merge_no_docker-def.yaml  py-temp-fork-pub-merge_with_docker-def.yaml  py-temp-fork-pvt-merge_no_docker-def.yaml  py-temp-fork-pvt-merge_with_docker-def.yaml  py-temp-fork-pvt_merge_no_docker-def.yaml  py-temp-fork-pvt_merge_with_local-def.yaml  py-temp-fork-scheduled_sync_with_upstream-def.yaml  py-temp-fork-sync-def.yaml  py-temp-pr-pub-no_docker-def.yaml  py-temp-pr-pub-with_docker-def.yaml  py-temp-pr-pvt-no_docker-def.yaml  py-temp-pr-pvt-straight_through-def.yaml  py-temp-pr-pvt-with_docker-def.yaml  py-temp-pr-pvt-with_native_docker-def.yaml  py-temp-pr-pvt_no_docker-def.yaml  py-temp-pr-pvt_straight_through-def.yaml  py-temp-pr-pvt_with_docker-def.yaml  py-temp-pr-pvt_with_native_docker-def.yaml  py-temp-pub-after-merge-def.yaml  (+25 more)
templates/legacy/: py-temp-dep-pvt_no_docker-def.yaml  py-temp-dep-pvt_with_docker-def.yaml  py-temp-pub-pvt_no_docker-def.yaml  py-temp-pypi-pub_custom_ci-def.yaml  py-temp-pypi-pub_no_docker-def.yaml  py-temp-pypi-pub_with_docker-def.yaml
