[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = 'devops-platform'
version = "2.4.0"
description = 'Repository for GitHub Actions Workflows.'

authors = [
    { name = "Hendrik du Toit", email = "hendrik@brightedge.co.za" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
]
license = "Proprietary"
license-files = ["LICENSE.txt"]
maintainers = [
    { name = 'Henru du Toit', email = 'henru@brightedge.co.za' },
    { name = 'Dirk du Toit', email = 'dirk@brightedge.co.za' },
]
readme = { file = 'README.md', content-type = 'text/markdown' }
#readme = "README.md"
requires-python = ">=3.10"

[project.urls]
# Documentation = "https://readthedocs.org"
Issues = "https://github.com/BrightEdgeeServices/devops-automation/issues"
Changelog = 'https://github.com/BrightEdgeeServices/devops-automation/blob/enhancement/master/ReleaseNotes.md'
Homepage = 'https://github.com/BrightEdgeeServices/devops-automation'
Repository = "https://github.com/BrightEdgeeServices/devops-automation.git"

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'
ignore-words-list = 'space-holder'
write-changes = ''

[tool.poetry.dependencies]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mdformat-gfm = ">=0.4.1"
mdformat-frontmatter = ">=2.0.8"
mdformat-footnote = ">=0.1.1"
pre-commit = ">=4.0.1"
rstcheck = { extras = [
    "sphinx",
], version = ">=6.2.4" }
sphinx = ">=8.1.3"
