[build-system]
    requires = [
        "poetry-core>=2.0.0,<3.0.0",
    ]
    build-backend = "poetry.core.masonry.api"

[project]
    name = "devops-platform"
    version = "15.0.1"
    description = "Repository for GitHub Actions Workflows."

    authors = [
        { name = "Hendrik du Toit", email = "hendrik@brightedge.co.za" }
    ]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Framework :: Pytest",
        "Topic :: Software Development :: Quality Assurance",
        "License :: Other/Proprietary License",
        "Topic :: Software Development :: Testing",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Testing",
    ]
    dependencies = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    ]
    license = "Proprietary"
    license-files = ["LICENSE.txt"]
    maintainers = [
        { name = "Hendrik du Toit", email = "hendrikdt@citiqprepaid.co.za" },
        { name = "Henru du Toit", email = "henru@brightedge.co.za" },
        { name = "Dirk du Toit", email = "dirk@brightedge.co.za" },
    ]
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.10,<3.15"

[project.urls]
    # Documentation = "https://readthedocs.org"
    Issues = "https://github.com/BrightEdgeeServices/devops-automation/issues"
    changelog = "https://github.com/BrightEdgeeServices/devops-automation/releases"
    Homepage = "https://github.com/BrightEdgeeServices/devops-automation"
    Repository = "https://github.com/BrightEdgeeServices/devops-automation.git"

[tool.black]
    line-length = 120
    target-version = [
        "py310",
        "py311",
        "py312",
        "py313",
        "py314",
    ]
    extend-exclude = """
    (
        ^tests/testdata.py
    )
    """

[tool.codespell]
    count = ""
    quiet-level = 2
    skip = "working/*,legacy/*,poetry.lock,tests/test_data/*"
    ignore-words-list = "space-holder"
    write-changes = ""

[tool.coverage.run]
source = [
    "src",
    "tests"
]

[tool.isort]
    profile = "black"

[tool.poetry]
packages = [
    { include = "devops-platform", from = "src" },
]

[tool.poetry.dependencies]
# DO NOT REMOVE THE BELOW - Henru
# rtecommon = { path = "../rtecommon", develop = true }
# fidewebtourparser = { path = "../fidewebtourparser", develop = true }
# fideratinglist = { path = "../fideratinglist", develop = true }
# rtedb = { path = "../rtedb", develop = true }
# sample-data-factory = { path = "../sample_data_factory", develop = true }

[tool.poetry.group.dev]
    optional = true

[tool.poetry.group.dev.dependencies]
    black = ">=25.1.0"
    codecov = ">=2.1.13"
    flake8 = ">=7.1.1"
    isort = "^5.13.2"
    mdformat-gfm = ">=0.4.1"
    mdformat-frontmatter = ">=2.0.8"
    mdformat-footnote = ">=0.1.1"
    pluggy = ">=1.6.0,<2.0.0"
    pre-commit = ">=4.0.1"
    pygments = "^2.19.1"
    pytest = ">=9.0.2"
    pytest-cov = ">=6.0.0"
    docker = ">=7.1.0"
    twine = ">=6.1.0"

[tool.pytest.ini_options]
    norecursedirs = ["tests/legacy"]
    addopts = [
        "-vv",
        "--ignore-glob=*/Archive",
        "--ignore=/legacy",
        "--ignore=tests/legacy",
    ]
    filterwarnings = [
        #    "ignore::DeprecationWarning",
    ]
    pythonpath = [
        "src",
        "tests",
    ]
    testpaths = "tests"
    markers = [
        "select: Run a selection of tests",
    ]
